src/style.css
body {
  background: rgba(39, 32, 68);
}

.container {
  max-width: 1400px;
  margin: 0 auto;
}
header {
  background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
    url(/images/tokyo\ tower.jpg);
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  text-align: center;
  padding: 200px 0;
  margin: 0 auto;
}
header h1 {
  font-family: "Anton", sans-serif;
  font-size: 96px;
  margin-bottom: 0;
  line-height: 1;
}
header h1,
h2 {
  color: white;
}
header h2 {
  font-family: "Dosis", sans-serif;
  font-size: 50px;
  margin: 0;
}
header h3 {
  color: white;
  font-family: "Anton", sans-serif;
  margin: 0;
  line-height: 0.6;
  margin-bottom: -40px;
  font-size: 35px;
}
header a {
  font-family: "Dosis", sans-serif;
  font-size: 14px;
  line-height: 1.5;
  text-align: center;
  color: #272044;
  padding: 16px 32px;
  margin-top: 32px;
  display: inline-block;
  letter-spacing: 3px;
  text-decoration: none;
  text-transform: uppercase;
  background: white;
}
.grid {
  display: grid;
  grid-template-columns: 1fr 2fr 1fr;
}
section {
  max-width: 1200px;
  margin: 0 auto;
}
footer h3 {
  font-weight: bold;
}

footer {
  background-image: linear-gradient(
      rgba(39, 32, 68, 0.8),
      rgba(39, 32, 68, 0.8)
    ),
    url(/images/street\ walk.jpg);
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  color: white;
  font-family: "Dosis", sans-serif;
  padding: 100px 0;
}
footer ul {
  padding: 0;
}
footer li {
  list-style: none;
  margin: 0;
  padding: 0;
  opacity: 0.7;
}
footer p {
  opacity: 0.7;
  margin-right: 20px;
}

footer a {
  color: white;
}

@media (max-width: 900px) {
  header {
    padding: 60px 0;
  }

  header h1 {
    font-size: 48px;
  }

  header h2 {
    font-size: 20px;
  }

  header h3 {
    font-size: 12px;
    line-height: 2.3;
  }
  header a {
    font-size: 10px;
    padding: 10px 20px;
  }
}

